# OPEngine

./: .gitignore  CMakeLists.txt  README.md  env.h.in
data/models/cornell/: areaLight.mtl  testObjs.mtl
data/models/reference/sponza/: ATTRIBUTION.md
data/models/reference/sponza_normalMaps/: ATTRIBUTION.md  sponza.mtl
data/scenes/: Cornell_scene.json  Cornell_scene.json.OP  backpack_scene.json  backpack_scene.json.OP  deferred_test.json  deferred_test.json.OP  sponza_scene.json  sponza_scene.json.OP
data/scenes/2D/: RadianceCascadeTest.json
data/shaders/: OPEngine.sprj  UnlitAlbedoFrag.frag  albedoFrag.frag  defaultVert.vert  lights.glsl  nullFrag.frag  simpleVert.vert  standardVert.vert  texturedFrag.frag
data/shaders/2D/LineDraw/: drawLine.frag  genLineSDF.frag
data/shaders/RadianceCascades/2D/: MarchCascade.frag  MergeCascades.frag  MipRadiance.frag  RenderRadiance.frag
data/shaders/common/: gaussianBlur.frag
data/shaders/deferred/: fsDeferredLighting.frag  gBufferAlbedo.frag  gBufferTextured.frag  lightVolume.vert  pointVolDeferredLighting.frag  pointVolumeLighting.frag
data/shaders/forward/: albedoFrag.frag  texturedFrag.frag
data/shaders/gBuffer/: deferredLighting.frag  fsDeferredLighting.frag  gBufferAlbedo.frag  gBufferTextured.frag
data/shaders/include/: lights.glsl
data/shaders/screenQuad/: quad.vert  quadFXAA.frag  quadTonemap.frag  quadTonemapLum.frag
data/shaders/shaders/: OPEngine_DVDFPS.glsl  OPEngine_DVDFVS.glsl
data/shaders/shadow_mapping/: layeredGeom.geom  layeredVert.vert
data/shaders/shadows/VSM/: vsm.frag
data/shaders/shadows/shadow_mapping/: layeredGeom.geom
data/shaders/skybox/: skybox.vert
data/shaders/tutorial/: modelLoading.frag  modelLoading.vert  singleUniformColor.frag  singleUniformColor.vert
data/shaders/voxelization/: conetraceGI.frag  conetraceGI.vert  drawVoxel.frag  drawVoxels.frag  drawVoxels.vert  mipmap.comp  mipmapSimple.comp  resolveVoxels.comp  voxel.frag  voxel.geom  voxel.vert
data/textures/skybox/: ATTRIBUTION.md
lib/assimp/: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/imgui/: CMakeLists.txt
lib/imgui/include/: imconfig.h
lib/jsoncpp/: CMakeLists.txt
lib/jsoncpp/src/: jsoncpp.cpp
lib/utils/: CMakeLists.txt
lib/zlib/: CMakeLists.txt
src/: main.cpp
src/common/: AssimpHelpers.h  Colors.h  JsonHelpers.h  MathUtils.h  ObjectLoader.h  Pool.h  Shader.h  ShaderMemoryPool.h  shader.h
src/debug/: ATTRIBUTION.md  OPProfiler.h
src/gl/: GLBuffer.h  GLImageTexture.h  GLTexture.h  GLUniformBuffer.h  Texture.h  UniformBuffer.h
src/render/: BaseRenderer.h  DeferredRenderer.h  ForwardRenderer.cpp  ForwardRenderer.h  VCTGIRenderer.h  renderers.h
src/render/Classical/: DeferredRenderer.h  ForwardRenderer.h  README.md
src/render/RadianceCascades/: README.md  Radiance2DRenderer.h
src/render/VoxelConeTracing/: CMVCTGIRenderer.h  OVCTGIRenderer.h  README.md  VCTGIRenderer.h
src/render/render_features/: RenderFeature.h  ShadowRenderer.h  SkyRenderer.h  VoxelRenderer.h
src/scene/: BaseLight.h  Camera.h  DirectionalLight.cpp  DirectionalLight.h  Mesh.h  Object.h  Scene.h  SceneParser.h  camera.h  lights.h  mesh.h  scene.h
src/test/: GLtest.cpp  GLtest.h
